# second-brain

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  Makefile  README.md  install.sh  pyproject.toml  run.sh  second-brain-review.md
config/: config.yaml
docs/: architecture.md  cli.md  lifecycle.md  mcp.md  using-the-app.md  wiki-structure.md
gui/SecondBrainBar/: .gitignore  Package.swift  README.md  bundle.sh
gui/SecondBrainBar/Resources/: Info.plist  generate_menubar_icon.py
src/second_brain/: __init__.py  build_log.py  cli.py  config.py  dependencies.py  llm_providers.py  state.py  status.py
src/second_brain/clustering/: __init__.py  base.py  hdbscan.py  preview.py  sources.py  threshold.py
src/second_brain/compilation/: __init__.py  agent.py  agent_prompt.py  (+3 more)
tests/: test_cli_doctor.py  test_dependencies.py  test_llm_providers.py  test_state.py
tests/test_clustering/: test_hdbscan.py  test_preview.py  test_sources.py  test_threshold.py
tests/test_compilation/: test_skip_folder.py  test_structure.py  test_token_guard.py  test_tool_executor.py  test_window_guard.py
tests/test_ingestion/: test_chatgpt_parser.py  test_manifest_cache.py  test_pdf_incremental.py  test_pdf_routing.py
tests/test_mcp/: test_bounding.py  test_capture.py  test_embeddings.py  test_graph.py  test_search_query.py  test_semantic.py  test_sources.py  test_sync.py
tests/test_parsing/: test_router.py
tests/test_triage/: test_gemma.py  test_pipeline.py  test_prompts.py
tests/test_wiki/: test_domain_ops.py  test_schema.py  test_slugs.py  test_structure.py
(+62 files in other folders)
