[project]
name = "second-brain"
version = "0.1.0"
description = "Local-first automated knowledge base with agentic LLM compilation"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "click",
    "pyyaml",
    "pydantic>=2.0",
    "watchdog",
    "pymupdf",
    "anthropic",
    # PDF parsing (local)
    "docling",
    "chandra-ocr[hf]",
    # Chandra runs on MLX (Apple Silicon); the engine for the local OCR lane.
    "mlx-vlm; sys_platform == 'darwin' and platform_machine == 'arm64'",
    # Wiki access + semantic search.
    "mcp[cli]",
    "sqlite-vec",
    "ollama",
    "scikit-learn>=1.9.0",
]

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio",
    "ruff",
    "mypy",
    "pre-commit",
]

[project.scripts]
second-brain = "second_brain.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/second_brain"]

[tool.ruff]
line-length = 99
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
